--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,16 @@ html, body{
     height: 100%;
 
 }
+
+header{
+    border-bottom: 1px solid rgb(58, 58, 60);
+}
+
+.title{
+    color: aliceblue;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: 0.4rem 0 0.4rem 0;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
