--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ html, body{
     display: flex;
     background-color: black;
     height: 100%;
+    align-items: center;
+    flex-direction: column;
 
 }
 
@@ -27,4 +29,28 @@ header{
     margin: 0.4rem 0 0.4rem 0;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#board-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+#board{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-gap: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.square{
+    border: 2px solid rgb(58, 58, 60);
+    min-width: 60px;
+    min-height: 60px;
+    font-size: 2rem;
+    font-weight: bold;
 }
