--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,14 @@ html, body{
 
 }
 
+#game{
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 header{
     border-bottom: 1px solid rgb(58, 58, 60);
 }
@@ -53,4 +61,41 @@ header{
     min-height: 60px;
     font-size: 2rem;
     font-weight: bold;
+}
+
+#keyboard-container{
+    height:200px;
+}
+
+.keyboard-row{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto 8px;
+    touch-action: manipulation;
+}
+
+.keyboard-row button {
+    font-family: inherit;
+    font-weight: bold;
+    border: 0;
+    padding: 0;
+    height: 58px;
+    cursor: pointer;
+    background-color: rgb(129, 131, 132);
+    color: rgb(215, 218, 220);
+    flex-grow: 1;
+    text-transform: uppercase;
+    margin-right: 6px;
+    border-radius: 4px;
+    user-select: none;
+
+}
+
+.keyboard-row button.wide-button{
+    flex-grow: 1.5;
+}
+
+.spacer-half{
+    flex-grow: 0.5;
 }
